--- a/sessoes.css
+++ b/sessoes.css
@@ -2,14 +2,28 @@
 html {
     box-sizing: border-box;
 }
-
-
-*{
+/*
+*, *::before, *::after {
+    box-sizing: inherit;
+    margin: 0;
     padding: 0;
-    margin:0;
     text-decoration: none;
-    list-style:none;
-    box-sizing: border-box;
+    /*display: flex;
+    flex-direction: column;
+    min-height: 100vh;*/
+
+* {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
     
 }
 
@@ -17,7 +31,6 @@ html {
     --color-primary: #091C26;
     --color-on-text-primary: #FFFFFF;
     --color-header: #041715;
-
 }
 
 
@@ -32,50 +45,61 @@ header{
     padding: 0 10px;
     
 }
-
-/* Flexbox para o container principal */
-.container{
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
-    padding: 0;
-    
-}
-
-
-.corpo-pagina{
+.corpo-pagina {
     flex-grow: 1;
     padding: 0 10px; 
     overflow-y: auto; 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: #091C26;
-
 }
-
-
-/* Área 1 */
-.area1 {
-    color: var(--color-on-text-primary);
+.imagem-texto{
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-}
-
-/* Área 2 */
-.area2 {
-    color: #FFFFFF;
-    font-family: 'Aclonica', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     text-align: center;
-    font-size: 35px;
-    justify-content: center;
+}
+.paragrafo-1, .paragrafo-2{
+    margin: auto;
+    text-align: justify;
+    color: #ffffff;
+    margin-left: 20px;
+}
+.capa-home{
+    max-width: 50%;
+    margin-left: 20px;
+}
+.Titulo, h3{
+    margin-top: 10px;
+    font-family: 'Aclonica', sans-serif;
+    color: #1ca032;
+    flex-grow: 1; 
+    margin-left: 20px;
 }
 
+footer{
+    padding: 25px; /* Adicione o espaçamento desejado ao rodapé. */
+    background-color: #041715;
+    color: #FFFFFF;
+    text-align: center;
+}
+/*
+main{
+    padding: 0 10px;
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+
+footer{
+    padding: 20px;
+    flex-shrink: 0;
+}
+*/
+.logo{
+    width: 175px;
+    vertical-align: middle;
+    
+}
 .navbar{
     background-color: #041715;
     padding-left: 30px;
@@ -86,12 +110,6 @@ header{
     
 }
 
-.logo{
-    display: inline-block;
-}
-
-
-
 
 .nav-links{
     list-style: none;
@@ -99,7 +117,7 @@ header{
 }
 
 .nav-item{
-    color: var(--color-on-text-primary);
+    color: rgba(255, 255, 255, 0.78);
     font-family: 'Aclonica', sans-serif;
     text-align: center;
     font-size: 12px;
@@ -126,38 +144,26 @@ header{
     vertical-align: middle;
     
 }
-
-.botao{
-    background-color: black;
-    color:#FFFFFF;
-    font-size:20px;
-    border-radius: 5px;
-    padding: 20px 20px; /* Espaçamento interno do botão */
-    border: none;
-    margin-top: 80px;
-    cursor: pointer;
-}
-
-
-.botao:hover{
-    background-color: #3c7c4f;
-    transition: .5s;
-    
-}
-
-.botao:hover a {
-    color: #10490b;
-}
-
 .flex-botao{
     display: none;
 }
 
-
-/* Telas menores*/
 /* Telas menores*/
 @media only screen and (max-width: 768px){
-    
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .imagem-texto{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    .paragrafo-1{
+        margin-left: 0px;
+        margin-top: 10px;
+    }
 
     .flex-botao{
         display: flex;
@@ -171,17 +177,6 @@ header{
         z-index: 1;
         
     }
-
-    .corpo-pagina{
-        flex-grow: 1;
-        padding: 0 10px; 
-        overflow-y: auto; 
-        display: flex;
-        flex-direction: column;
-        background-color: #091C26;
-    
-    }
-
 
     .botao{
         padding: 10px 20px; 
@@ -197,14 +192,12 @@ header{
         right: 10px;
         top: 10px;
     }
-
     /*
     .botao-navbar.clicked{
         background-color: #4f47c5;
         color: #fff;
     }
     */
-
     .logo{
         display: inline-block;
         transition: opacity 0.3s;
@@ -290,30 +283,7 @@ header{
         display: none;
     }
     
-    .botao.oculto{
-        display: none;
-    }
-    /* teste */
-
-    
-
 }
-  
-.nav-links.active {
-    display: flex;
-}
-  
-.nav-links li {
-    margin: 10px 0;
-}
-  
-.menu-icon {
-    display: flex;
-    position: absolute;
-    top: 10px;
-    right: 20px;
-}
-
 
 .flexbox-capa{
     display: flex;
@@ -338,37 +308,60 @@ footer{
     width: 40%;
 }
 
+/*sessoes*/
 
-
-
-.botao-1{
-    background-color: black;
-    color:#FFFFFF;
-    font-size:20px;
-    border-radius: 5px;
-    padding: 20px 20px; 
-    border: none;
-    margin-top: 80px;
-    cursor: pointer;
+body{
+    background-color: var(--color-primary);
 }
 
-
-.botao-1:hover{
-    background-color: #3c7c4f;
-    transition: .5s;
-    
+.sessoes-title{
+    text-align: center;
+    margin: 40px;
+    color:var(--color-on-text-primary);
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
 }
 
-.botao-1:hover a {
-    color: #10490b;
+.cards-sessoes{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: 'inter', sans-serif;
+    color: var(--color-on-text-primary);
 }
 
-.chamada-sc{
-    margin-top: 180px;
-
+.card{
+    background-color: var(--color-header);
+    width: 500px;
+    border-radius: 4%;
+    margin-bottom: 40px;
 }
-.ingresso-pic{
-    width: 60%;
-    height: 60%;
-    
+
+.card-palestra{
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: x-large;
+}
+
+.card-ministrante{
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: large;
+}
+
+.card-descricao{
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.card-slide{
+    text-align: center;
+}
+
+.card-slide_texto{
+    margin-bottom: 20px;
 }
